suppress the flyout FB comments box as we can't stop it from clipping at the right of the viewport

--- a/app/styles/app.less
+++ b/app/styles/app.less
@@ -142,6 +142,11 @@ body.loading {
   padding: 8px 0; 
 }
 
+.navbar.special-feature .special-feature-misc .share-button {
+  height: 20px;
+  overflow: hidden;
+}
+
 #main {
   margin-top: 49px;
   transition: background-color 0.25s;
